@startuml

title __DRIVESAFELY.APP's Class Diagram__\n

  namespace com.example.drivesafely {
    class com.example.drivesafely.BuildConfig {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.CameraSourcePreview {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.ChooseContact {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.CustomTypefaceSpan {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.Dashboard {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.EyeTracking {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.FaceGraphic {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.GraphicOverlay {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.Help {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.RecentTrips {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.Settings {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.SpeedometerFragment {
    }
  }
  

  namespace com.example.drivesafely {
    class com.example.drivesafely.SplashScreen {
    }
  }
  

  com.example.drivesafely.CameraSourcePreview -up-|> android.view.ViewGroup
  com.example.drivesafely.CameraSourcePreview o-- com.example.drivesafely.GraphicOverlay : mOverlay
  com.example.drivesafely.ChooseContact .up.|> pub.devrel.easypermissions.EasyPermissions.PermissionCallbacks
  com.example.drivesafely.ChooseContact -up-|> androidx.fragment.app.Fragment
  com.example.drivesafely.CustomTypefaceSpan -up-|> android.text.style.TypefaceSpan
  com.example.drivesafely.Dashboard .up.|> android.view.View.OnClickListener
  com.example.drivesafely.Dashboard -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.drivesafely.EyeTracking .up.|> pub.devrel.easypermissions.EasyPermissions.PermissionCallbacks
  com.example.drivesafely.EyeTracking -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.drivesafely.EyeTracking o-- com.example.drivesafely.GraphicOverlay : mGraphicOverlay
  com.example.drivesafely.EyeTracking o-- com.example.drivesafely.CameraSourcePreview : mPreview
  com.example.drivesafely.FaceGraphic -up-|> com.example.drivesafely.GraphicOverlay.Graphic
  com.example.drivesafely.GraphicOverlay -up-|> android.view.View
  com.example.drivesafely.Help -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.drivesafely.RecentTrips -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.drivesafely.Settings -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.drivesafely.SpeedometerFragment .up.|> android.location.LocationListener
  com.example.drivesafely.SpeedometerFragment -up-|> androidx.fragment.app.Fragment
  com.example.drivesafely.SplashScreen -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
